<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmiActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:background="@drawable/textinputborder"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#42A5F5">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="19dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:src="@drawable/bck"
                android:id="@+id/back"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/cabin_medium"
                android:text="@string/EMI_Calc"
                android:textColor="#DFFFFFFF"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>




    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_margin="10dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/principal"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:fontFamily="@font/cabin"
            android:id="@+id/PA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:background="@drawable/textinputborder"
            android:hint="Enter Your Amount"

            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="number"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/cabin_medium"
            android:id="@+id/intrest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_margin="10dp"
            android:text="@string/intrest"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:fontFamily="@font/cabin"
            android:id="@+id/IntrestAMT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:background="@drawable/textinputborder"
            android:hint="Max 50% Per Annum"

            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/cabin_medium"
            android:id="@+id/loan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="fill_horizontal|center"
            android:text="@string/loan"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/loanAMT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/textinputborder"
            android:fontFamily="@font/cabin"
            android:gravity="center"

            android:hint="Enter Your Amount In Year"
            android:inputType="number"
            android:padding="8dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center">


            <Button

                android:fontFamily="@font/cabin"
                android:id="@+id/calculate"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="Calculate"
                android:textSize="15dp" />

            <Button
                android:fontFamily="@font/cabin"
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"

                android:layout_margin="10dp"
                android:text="Clear"
                android:textSize="15dp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:id="@+id/EMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="EMI (Yearly Payment)"
            android:textSize="20dp"
            android:fontFamily="@font/cabin_medium"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/textinputborder"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:padding="8dp"

            android:textSize="20dp" />


    </LinearLayout>



</LinearLayout>