<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyConvertActivity"
    android:orientation="vertical">

<!--    Converter of currency of indian rupee to dollar-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#42A5F5">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:src="@drawable/bck"
            android:id="@+id/back"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/currency_cal"
            android:textColor="#DFFFFFFF"
            android:textSize="30dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/cabin_medium"
            android:layout_gravity="fill_horizontal|center"
            android:text="@string/Amount_currency"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:fontFamily="@font/cabin"

            android:id="@+id/Amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:background="@drawable/textinputborder"
            android:hint="Enter Your Amount"

            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="number"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/cabin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center"
            android:layout_margin="10dp"
            android:text="@string/Amt_currency"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/cabin"

            android:id="@+id/expInterest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="8dp"
            android:background="@drawable/textinputborder"
            android:hint="DOLLAR ($) --> IND (₹)"
            android:textSize="20dp"

            android:gravity="center"
            android:layout_margin="10dp"
            android:inputType="number"/>

    </LinearLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center">

            <Button


                android:id="@+id/calculate"
                android:layout_width="250dp"

                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="@font/cabin"
                android:gravity="center"
                android:text="Calculate"
                android:textSize="15dp" />





        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView

            android:id="@+id/MaturityFD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/cabin_medium"
            android:text="Conversion Of Ur Currency"
            android:textSize="20dp"

            android:textStyle="bold"
            />

        <TextView
            android:fontFamily="@font/cabin"

            android:id="@+id/converted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/textinputborder"

            android:gravity="center"
            android:padding="8dp"

            android:textSize="20dp" />


    </LinearLayout>








</LinearLayout>






